--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -28,7 +28,7 @@ p, li {
 }
 
 a {
-    color: lightpink;
+    color: lightgreen;
 }
 
 a:hover {
@@ -62,6 +62,10 @@ header h1 {
 }
 
 .text-pink {
+    color: rgba(229, 74, 114, 1.0);
+}
+
+a h3 {
     color: rgba(229, 74, 114, 1.0);
 }
 
@@ -119,7 +123,7 @@ header h1 {
 }
 
 #other-projects a {
-    color: white;
+    color: #E54A72;
 }
 
 .text-bold {
@@ -128,4 +132,84 @@ header h1 {
 
 .back-coloumn-pink {
     background-color: #FCBCCD;
+}
+
+.tool-icons {
+    height: 2em;
+    width: 2em;
+}
+
+footer {
+    padding-right:50px;
+    padding-left: 50px;
+}
+
+.logo-container {
+    display:flex;
+    gap: 10px;
+}
+
+.tools-list li {
+    margin-top: 20px;
+}
+
+.background-white {
+    background-color: #FFFFFF;
+}
+
+.rounded {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+/* slideshow section */
+
+.slider-container {
+    width: 100%;
+    height: 446px;
+    position: relative;
+    text-align: center;
+    overflow: hidden;
+}
+
+.image-container {
+  width: 4320px;
+  height: 446px;
+  clear: both;
+  position: relative;
+  animation-name: slider;
+  animation-duration: 20s;
+  animation-delay: 10s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+  animation-fill-mode: backwards;
+  animation-play-state: running;
+}
+
+.slider-image {
+  width: auto;
+  height: 100%;
+  float: left;
+  position: relative;
+}
+
+@keyframes slider {
+  0% {
+    transform: translate(0, 0);
+  }
+  33% {
+      transform: translate(-1080px, 0);
+  }
+  66% {
+      transform: translate(-2160px, 0);
+  }
+  100% {
+      transform: translate(0, 0);
+  } 
+}
+
+h3 a {
+    color: pink;
 }
