Remove unnecessary details in index.html

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -221,3 +221,7 @@ h3 a {
   .video-player::-webkit-media-controls {
     height: 100%;
   }
+
+  .underline-text {
+    text-decoration: underline;
+  }
