--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,7 +7,7 @@
     url('../fonts/Gilroy-ExtraBold/font.woff') format('woff');
 }
 
-html,body {
+html, body {
     min-width: 50%;
 }
 
@@ -26,10 +26,6 @@ p, li {
 .p-current-position {
     font-weight: bold;
 }
-/* 
-ul li a, ul li a:hover {
-    color: pink;
-} */
 
 a {
     color: lightgreen;
@@ -39,7 +35,8 @@ a:hover {
     color: #FFFFFF;
 }
 
-h3 a {
+h3 a,
+a h3 {
     color: rgba(229, 74, 114, 1.0);
 }
 
@@ -69,10 +66,6 @@ header h1 {
     color: rgba(229, 74, 114, 1.0);
 }
 
-a h3 {
-    color: rgba(229, 74, 114, 1.0);
-}
-
 .bg-pink-darker {
     background-color: rgba(229, 74, 114, 0.9);
 }
@@ -82,7 +75,7 @@ a h3 {
 }
 
 .col-pad-right-50 {
-    padding-left: 0;
+    padding-right: 0;
 }
 
 .col-pad-x-100 {
@@ -99,13 +92,12 @@ a h3 {
     .col-pad-left-50 {
         padding-left: 50%;
     }
-
     .col-pad-right-50 {
         padding-right: 50%;
     }
 }
 
-/*Bootstrap overrides*/
+/* Bootstrap overrides */
 .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
     background-color: rgba(229, 74, 114, 1.0) !important;
     color: #FFFFFF;
@@ -121,7 +113,6 @@ a h3 {
     color: rgba(229, 74, 114, 1.0);
 }
 
-/* Change the color in the stroke property of the image data */
 .custom-toggler .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
@@ -144,12 +135,12 @@ a h3 {
 }
 
 footer {
-    padding-right:50px;
+    padding-right: 50px;
     padding-left: 50px;
 }
 
 .logo-container {
-    display:flex;
+    display: flex;
     gap: 10px;
 }
 
@@ -168,7 +159,6 @@ footer {
 }
 
 /* slideshow section */
-
 .slider-container {
     width: 100%;
     height: 446px;
@@ -178,50 +168,50 @@ footer {
 }
 
 .image-container {
-  width: 4320px;
-  height: 446px;
-  clear: both;
-  position: relative;
-  animation-name: slider;
-  animation-duration: 20s;
-  animation-delay: 10s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-  animation-direction: normal;
-  animation-fill-mode: backwards;
-  animation-play-state: running;
+    width: 4320px;
+    height: 446px;
+    clear: both;
+    position: relative;
+    animation-name: slider;
+    animation-duration: 20s;
+    animation-delay: 10s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+    animation-fill-mode: backwards;
+    animation-play-state: running;
 }
 
 .slider-image {
-  width: auto;
-  height: 100%;
-  float: left;
-  position: relative;
+    width: auto;
+    height: 100%;
+    float: left;
+    position: relative;
 }
 
 @keyframes slider {
-  0% {
-    transform: translate(0, 0);
-  }
-  33% {
-      transform: translate(-1080px, 0);
-  }
-  66% {
-      transform: translate(-2160px, 0);
-  }
-  100% {
-      transform: translate(0, 0);
-  } 
+    0% {
+        transform: translate(0, 0);
+    }
+    33% {
+        transform: translate(-1080px, 0);
+    }
+    66% {
+        transform: translate(-2160px, 0);
+    }
+    100% {
+        transform: translate(0, 0);
+    }
 }
 
 .video-player {
     height: auto;
-  }
-  
-  .video-player::-webkit-media-controls {
-    height: 100%;
-  }
+}
 
-  .underline-text {
+.video-player::-webkit-media-controls {
+    height: 100%;
+}
+
+.underline-text {
     text-decoration: underline;
-  }
+}
